<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/view_color"
    tools:context=".controller.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:layout_marginRight="@dimen/margin_login_layout"
        android:background="@color/view_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/emailPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_border"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/control_height"
                    android:background="@color/text_white"
                    android:cursorVisible="true"
                    android:hint="@string/mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_border"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/control_height"
                    android:background="@color/text_white"
                    android:cursorVisible="true"
                    android:hint="@string/pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rememberMeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/control_height"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberMeCB"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight=".15"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/rememberMeTV"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight=".85"
                android:gravity="start|center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/rememberMe"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_red_background"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginLayout"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/text_red"
            android:textSize="@dimen/textsize_title"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".40"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/releaseDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".60"
            android:gravity="end|center_vertical"
            android:singleLine="true"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tagLineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:singleLine="true"
            android:text="@string/tag"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="normal" />
    </LinearLayout>
</RelativeLayout>