<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_color">

    <include
        android:id="@+id/layHeader"
        layout="@layout/header_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/profileLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutFirstName"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/control_height"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblFirstNameKey"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".27"
                android:gravity="center_vertical|start"
                android:padding="5dp"
                android:text="@string/firstName"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/lblFirstNameColon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".03"
                android:gravity="center_vertical|start"
                android:padding="3dp"
                android:text="@string/colon"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".70"
                android:scrollbarSize="1dp"
                android:scrollbarThumbHorizontal="@drawable/scrollbar">

                <TextView
                    android:id="@+id/lblFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLastName"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/control_height"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblLastNameKey"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".27"
                android:gravity="center_vertical|start"
                android:padding="5dp"
                android:text="@string/lastName"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/lblLastNameColon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".03"
                android:gravity="center_vertical|start"
                android:padding="3dp"
                android:text="@string/colon"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/lblLastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".70"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/control_height"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblEmailKey"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".27"
                android:gravity="center_vertical|start"
                android:padding="5dp"
                android:text="@string/email"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/lblEmailColon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".03"
                android:gravity="center_vertical|start"
                android:padding="3dp"
                android:text="@string/colon"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".70"
                android:scrollbarSize="1dp"
                android:scrollbarThumbHorizontal="@drawable/scrollbar">

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRoles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:gravity="top|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRolesKey"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight=".27"
                android:gravity="center_vertical|start"
                android:padding="5dp"
                android:text="@string/roles"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/lblRolesColon"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight=".03"
                android:gravity="center_vertical|start"
                android:padding="3dp"
                android:text="@string/colon"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <ListView
                android:id="@+id/rolesListView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/todo_seperator_color"
                android:dividerHeight="1dp"
                android:listSelector="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
